<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweet tweet</string>

    <string name="welcome">Welcome to Twitter</string>
    <string name="intro">See what\'s happening in the world right now</string>
    <string name="login_label">Connect to Twitter</string>

    <string name="handle">\@%1$s</string>
    <string name="number">%1$d</string>

    <string name="compose_hint">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="cancel">Cancel</string>

    <string name="following">&lt;b>%1$s&lt;/b> FOLLOWING</string>
    <string name="followers">&lt;b>%1$s&lt;/b> FOLLOWERS</string>
</resources>