<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/compose_hint"
        android:id="@+id/etTweet"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet"
        android:id="@+id/btnTweet"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/etTweet"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btnCancel"
        android:layout_alignBaseline="@id/btnTweet"
        android:layout_toLeftOf="@id/btnTweet"
        android:layout_toStartOf="@+id/btnTweet"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

</RelativeLayout>