<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".activities.LoginActivity"
                android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_twitter_blue"
        android:tint="@color/white"
        android:id="@+id/ivLogo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/white"
        android:id="@+id/tvWelcome"
        android:layout_below="@id/ivLogo"
        android:padding="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:id="@+id/tvIntro"
        android:layout_below="@id/tvWelcome"
        android:padding="16dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:onClick="loginToRest"
        android:textColor="@color/white"
        android:background="@drawable/login_btn_bg"
        android:text="@string/login_label"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>